Fixes logout button on mobile

--- a/client/src/css/components/button.css
+++ b/client/src/css/components/button.css
@@ -19,6 +19,13 @@
   background-color: rgb(var(--color-grey));
 }
 
+.button--90 {
+  height: calc(var(--spacing) * 2);
+  padding-left: calc(var(--spacing) / 1.25);
+  padding-right: calc(var(--spacing) / 1.25);
+  font-size: var(--font-size-90);
+}
+
 button:disabled {
   pointer-events: none;
   opacity: .5 !important;
