--- a/client/src/css/components/header.css
+++ b/client/src/css/components/header.css
@@ -19,6 +19,7 @@
 
 .header nav {
   display: flex;
+  align-items: center;
 }
 
 .header nav a {
@@ -28,13 +29,22 @@
   font-weight: bold;
 }
 
+.header__button {
+  margin-top: 0 !important;
+}
+
 @media screen and (max-width: 440px) {
   .header h1 {
-    font-size: 1.2em;
+    font-size: 1.1em;
     line-height: 1em;
   }
 
   .header nav a {
     font-size: 1em;
+  }
+
+  .header__button {
+    font-size: var(--font-size-70) !important;
+    line-height: 0.9em;
   }
 }
